--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,7 +25,7 @@ body {
     align-items: center;
     flex-direction: column;
     width: 550px;
-    height: 550px;
+    max-height: 550px;
     margin: 150px auto 0 auto;
 }
 
